# FBrowser

./: .gitignore  CMakeLists.txt  README.md  _copy_rv.sh  _prepare_for_rv.sh  main.cpp  mainwindow.cpp  mainwindow.h
Rootfs/FB/: autorun.sh  board.sh  config.json
Rootfs/FB/www/: index.html  simpleui.css  simpleui.js
Rootfs/etc/init.d/: S51FBrowser
Rootfs/etc/network/: interfaces
